<resources>
    <string name="app_name">MangaReader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>


    <string name="home_title">Manga List</string>

    <string name="try_again">TRY AGAIN</string>
    <string name="fetch_error_message">Couldn\'t retrieve mangas</string>


    <string name="layout_item_alias">Alias:</string>
    <string name="layout_item_chapters">Chapters:</string>
    <string name="layout_item_genre">Genres:</string>
    <string name="layout_item_status">Status:</string>
    <string name="layout_item_latest">Latest:</string>
    <string name="layout_item_description">Description:</string>
    <string name="layout_item_status_ongoing">Ongoing</string>
    <string name="layout_item_status_finished">Finished</string>
    <string name="layout_item_status_unknown">Unknown</string>
    <string name="prev_ch">Prev.Ch</string>
    <string name="next_ch">Next.Ch</string>
    <string name="chapter">Chapter:\u0020</string>
    <string name="slash">/</string>


</resources>
