<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    tools:context="com.example.picspacehd.mangazone.fragment.MangaDetailFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/manga_info_layout_item_cover"
            android:layout_width="100dp"
            android:layout_height="137dp"
            android:layout_margin="4dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            tools:src="@drawable/cover" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/layout_item_alias"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/layout_item_created"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/layout_item_latest"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/layout_item_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/layout_item_genre"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/manga_info_layout_item_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="1dp"
                android:textColor="#DAD9D5"
                tools:text="random" />

            <TextView
                android:id="@+id/manga_info_layout_item_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="#DAD9D5"
                tools:text="10/22/1999" />

            <TextView
                android:id="@+id/manga_info_layout_item_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="#DAD9D5"
                tools:text="10/22/2017" />

            <TextView
                android:id="@+id/manga_info_layout_item_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textColor="#DAD9D5"
                tools:text="Ongoing" />


            <TextView
                android:id="@+id/manga_info_layout_item_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:padding="1dp"
                android:textColor="#DAD9D5"
                tools:text="action, drama, thriller, slice of life, crime" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_item_description"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#DAD9D5"
            tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:text="Read Chapter One"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimaryDark"
        android:textStyle="normal|bold" />

</LinearLayout>
