<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#25405B"
    android:padding="14dp">

    <ImageView
        android:id="@+id/manga_layout_item_cover"
        android:layout_width="100dp"
        android:layout_height="137dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        tools:src="@drawable/cover" />

    <TextView
        android:id="@+id/manga_layout_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/manga_layout_item_cover"
        android:layout_toRightOf="@+id/manga_layout_item_cover"
        android:ellipsize="end"
        android:padding="8dp"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="SAMPLE"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manga_layout_item_title"
        android:layout_toEndOf="@+id/manga_layout_item_cover"
        android:layout_toRightOf="@+id/manga_layout_item_cover"
        android:orientation="horizontal"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/layout_item_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/layout_item_alias"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/layout_item_genre"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#758DA5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/manga_layout_item_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DAD9D5"
                tools:text="Ongoing" />

            <TextView
                android:id="@+id/manga_layout_item_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#DAD9D5"
                tools:text="random" />

            <TextView
                android:id="@+id/manga_layout_item_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#DAD9D5"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="action, drama, thriller, slice of life, crime" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>