<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chapter_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.picspacehd.mangazone.com.picspacehd.picspacehd.mangazone.activity.ChapterImagesActivity">

    <LinearLayout
        android:id="@+id/chapter_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:weightSum="4">

        <RelativeLayout
            android:id="@+id/prev_chapter_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/prev_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_navigate_before_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/prev_chapter"
                android:layout_toRightOf="@+id/prev_chapter"
                android:text="@string/prev_ch"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/chapter_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/chapter"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="17sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/current_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/chapter_TextView"
                android:layout_toRightOf="@+id/chapter_TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                tools:text="22" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/next_chapter_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:id="@+id/next_chapter_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_ch"

                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/next_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/next_chapter_textview"
                android:layout_toRightOf="@+id/next_chapter_textview"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_navigate_next_white_24dp" />

        </RelativeLayout>


    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/image_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/page_navigation"
        android:layout_below="@+id/chapter_navigation">

    </android.support.v4.view.ViewPager>


    <LinearLayout
        android:id="@+id/page_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/btn_prev_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:paddingRight="20dp"
            android:src="@drawable/ic_navigate_before_white_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/current_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/slash"
                android:layout_toStartOf="@+id/slash"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                tools:text="5" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/slash"
                android:textColor="@color/textColorPrimary"
                android:textSize="19sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/total_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/slash"
                android:layout_toRightOf="@+id/slash"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                tools:text="60" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:src="@drawable/ic_navigate_next_white_24dp" />

    </LinearLayout>


</RelativeLayout>
